--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.web.rule=Host(`alvinandpartners.com `)"
-      - "traefik.http.routers.web.entrypoints=websecure"
+      - "traefik.http.routers.web.entrypoints=web"
       - "traefik.http.routers.web.tls=true"
       - "traefik.http.routers.web.tls.certresolver=production"
     networks:
