--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,13 @@ services:
   web:
     build:
       context: .
-    ports:
-      - "8081:8081"
+#    ports:
+#      - "8081:8081"
     volumes:
       - .:/usr/src/backend/app
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`alvinandpartners.com `)"
+      - "traefik.http.routers.web.rule=Host(`alvinandpartners.com`)"
       - "traefik.http.routers.web.entrypoints=web"
       - "traefik.http.routers.web.tls=true"
       - "traefik.http.routers.web.tls.certresolver=production"
