--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3"
 
 
 services:
-  web:
+  web_alvin:
+    container_name: web_alvin
     build:
       context: .
 #    ports:
@@ -11,10 +12,10 @@ services:
       - .:/usr/src/backend/app
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`alvinandpartners.com`)"
-      - "traefik.http.routers.web.entrypoints=web"
-      - "traefik.http.routers.web.tls=true"
-      - "traefik.http.routers.web.tls.certresolver=production"
+      - "traefik.http.routers.web_alvin.rule=Host(`alvinandpartners.com`)"
+      - "traefik.http.routers.web_alvin.entrypoints=web"
+      - "traefik.http.routers.web_alvin.tls=true"
+      - "traefik.http.routers.web_alvin.tls.certresolver=production"
     networks:
         - main_host
 networks:
