--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
     container_name: web_alvin
     build:
       context: .
-#    ports:
-#      - "8081:8081"
+    ports:
+      - "8081:8081"
     volumes:
       - .:/usr/src/backend/app
     labels:
