--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ laces==0.1.1
 openpyxl==3.1.4
 pillow==10.3.0
 pillow_heif==0.16.0
+psycopg2-binary==2.9.9
 pytz==2024.1
 requests==2.32.3
 six==1.16.0
